--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
